# vision

./: .gitignore  README.md
Opencv/bow/: CMakeLists.txt  bow.cpp  bowUse.cpp  matcheur.cpp
Visp/Visp_Project/: Makefile  camDisto.cpp  cube-tracking.cpp  ellipse-tracking.hpp  line-tracking.cpp  visp-calib-intrinsic.cpp  visp-dot-tracker2.cpp  visp-klt-tracker.cpp  visp-mbt-tracker.cpp  visp-me-2lines.cpp  visp-me-ellipse.cpp
opencv/bow/: bow.cpp  matcheur.cpp
visp/Dev-Visp/: CMakeLists.txt  Makefile  tutorial-grabber-v4l2  tutorial-grabber.cpp  tutorial-video  tutorial-video-reader.cpp
visp/build-Visp_Project/: calibrate2dGrid.xml  cube-tracking  cube.0.pos  cube.init  cube.xml  cube0.cao  cube0.init  cube0.xml  cube1.0.pos  cube1.cao  cube1.init  cube1.xml  teabox.0.pos  tutorial-klt-tracker  tutoriel-blob-tracker-live  tutoriel-klt-tracker-live  visp-calib
visp/build-Visp_Project/calib/: grid-01.pgm  grid-02.pgm  grid-03.pgm  grid-04.pgm
visp/visp_Project/: CMakeLists.txt  blob-tracking-multiple.cpp  blob-tracking-multiple.hpp  cube-tracking.hpp  ellipse-tracking.cpp  line-tracking.hpp  main.cpp  model-edge-tracking.cpp  model-edge-tracking.hpp  opencvcam.cpp  visp-me-nurbs.cpp  visp-pose-computation.cpp
